--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,14 +11,15 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-dark bg-primary justify-content-center">
-      <a class="navbar-brand" href="/">Account Login</a>
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand text-center mx-3" href="/">Account Login</a>
+      <button type="button" class="btn btn-outline-info mx-3" onclick="window.location.href='/logout'">Log out</button>
     </nav>
     <div>{{> messages}}</div>
   </header>
 
-    {{{body}}}
-    
+  {{{body}}}
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
